--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Project files
+example*/bin/*.exe
+example*/bin/*.dll
+example*/bin/*.mp4
+example*/obj/
